ghc-4335c07/testsuite/tests/partial-sigs/should_fail/WildcardInTypeSynonymRHS.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInTypeSynonymRHS where

type Foo = Maybe _
