ghc-4335c07/testsuite/tests/partial-sigs/should_fail/WildcardInTypeSynonymRHS.stderr

WildcardInTypeSynonymRHS.hs:4:18: error:
    Wildcard ‘_’ not allowed
      in the declaration for type synonym ‘Foo’
